--- a/code-here.css
+++ b/code-here.css
@@ -51,3 +51,16 @@
     border-radius: 1em 30% 1em 30%;
     box-shadow: 2px 2px gray;
 }
+form {
+    display: block;
+    width: 50%;
+    margin: auto;
+}
+form > input {
+    display: block;
+    margin: auto;
+}
+form > label {
+    display: block;
+    text-align: center;
+}
